<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gotway</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings_text">Settings</string>
    <string name="mainPage">Home</string>
    <string name="settingPage">Setting</string>
    <string name="aboutPage">About Us</string>
    <string name="exit_by_muilt_click">Click again to quit the app</string>
    <string name="exit_alert">Keep app running in the background?</string>
    <string name="exit_remember">Remember this choice</string>
    <string name="exit_hold">Keep connected</string>
    <string name="exit_totally">Quit completely</string>
    <string name="setMode">Mode Selecting</string>
    <string name="setModeExplode">Powerful Mode</string>
    <string name="setModeComfortable">Comfortable Mode</string>
    <string name="setModeSoft">Soft Mode</string>
    <string name="setWarning">Alarm Setting</string>
    <string name="setWarningFirst">Close First Alarm</string>
    <string name="setWarningSecond">Close Second Alarm</string>
    <string name="setWarningOpenAll">Open Alarm</string>
    <string name="setPaddleSpeed">Pedal Tilt-back Speed Setting</string>
    <string name="setPaddleSpeedA">16km/h</string>
    <string name="setPaddleSpeedS">17km/h</string>
    <string name="setPaddleSpeedD">18km/h</string>
    <string name="setPaddleSpeedF">19km/h</string>
    <string name="setPaddleSpeedG">20km/h</string>
    <string name="setPaddleSpeedH">21km/h</string>
    <string name="setPaddleSpeedJ">22km/h</string>
    <string name="setPaddleSpeedK">23km/h</string>
    <string name="setPaddleSpeedL">24km/h</string>
    <string name="setPaddleSpeedZ">25km/h</string>
    <string name="setPaddleSpeedCancel">Pedal Tilt-back Speed Setting</string>
    <string name="setCorrect">Horizontal Calibration</string>
    <string name="setCorrectStart">Horizontal Calibration</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_title">Select Device:</string>
    <string name="scanner_action_cancel">Close</string>
    <string name="scanner_subtitle__not_bonded">Available device:</string>
    <string name="scanner_empty">No device available</string>
    <string name="not_available">n/a</string>
    <string name="device_loss_link">The blue tooth is disconnected,reconnect automatically later</string>
    <string name="no_ble">Blue tooth4.0 not supported by phone</string>
    <string name="device_error">Device not supported</string>
    <string name="device_disConn">(Disconnected</string>
    <string name="device_conn">Connected successfully</string>
    <string name="device_conning">Connecting…</string>
    <string name="cant_send_when_moving">The device is in the running state, can not be applied instruction</string>
    <string name="disconnect_alert">Device connected.Disconnect or not?</string>
    <string name="disconnect_sure">Disconnect</string>
    <string name="disconnect_cancel">Cancel</string>
    <string name="about_copyRight">CopyRight©2015GotWay</string>
    <string name="about_version">GotWay%s</string>
    <string name="legal_text">All rights reserved. Not liable for any damage incurred from use of this software including but not limited to: monetary loss, temporary paralysis, halitosis, spontaneous combustion, road rash, and or premature hair loss.</string>
    <string name="about_title">Gotway MCM4 App</string>
    <string name="battery_stats">Battery stats:</string>
    <string name="energy_consumption">Energy consumption:</string>
    <string name="preferencesPage">Preferences</string>
    <string name="pref_speed_divider">Speed divider</string>
    <string name="pref_speed_divider_summary">Speed correction factor.\nDefault value: 1\nCurrent value:</string>
    <string name="pref_current_divider">Current divider</string>
    <string name="pref_current_divider_summary">Used to calculate current.\nDefault value: 100\nCurrent value:</string>
    <string name="pref_speed_divider_err">Please enter number between 1.0 and 2.0</string>
    <string name="error_title">Error</string>
    <string name="pref_current_divider_err">Please enter number between 100.0 and 400.0</string>
    <string name="pref_cat_vibration_alarm">Vibration alarm</string>
    <string name="pref_vb_enable">Enable vibration alarm</string>
    <string name="pref_alarm_speed1">First alarm speed</string>
    <string name="pref_alarm_speed2">Second alarm speed</string>
    <string name="pref_alarm_speed3">Third alarm speed</string>
    <string name="pref_alarm_speed_summary">Vibrate when speed exceeds the value</string>
    <string name="pref_alarm_speed_err">Please enter value between 1.0 and 40.0</string>
    <string name="custom_command">Custom command</string>
    <string name="pref_cat_gps">GPS speed</string>
    <string name="pref_display_gps_speed">Display GPS speed</string>
    <string name="pref_mode_powerful">Powerful</string>
    <string name="pref_mode_comphy">Comfortable</string>
    <string name="pref_mode_soft">Soft</string>
    <string name="pref_tiltback_off">Off</string>
    <string name="pref_alarm1"><![CDATA[>21 km/h]]></string>
    <string name="pref_alarm2"><![CDATA[>24km/h]]></string>
    <string name="pref_alarm3"><![CDATA[>32km/h]]></string>
    <string name="resDialogText">Gotway app has crashed. Press OK to send report to the developer to help him to fix the issue.</string>
    <string name="resToastText">Gotway app has crashed. Please send report to the developer to help him to fix the issue.</string>
    <string name="resDialogNegativeButtonText">Cancel</string>
    <string name="resDialogPositiveButtonText">OK</string>
</resources>
